# deploy_python_tutorial_project

./: .gitignore  Dockerfile  README.md  demo.py  devices.csv  docker-compose.yaml  log.txt  manage.py  pyproject.toml  requirements.txt  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
blogapp/migrations/: 0001_initial.py
blogapp/templates/blogapp/: article_detail.html  article_list.html
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
myapiapp/: serializers.py  urls.py  views.py
myauth/: tests.py  urls.py  views.py
myauth/management/commands/: bind_user.py
myauth/migrations/: 0001_initial.py
myauth/templates/myauth/: about-me.html  login.html  register.html
mysite/: asgi.py  settings.py  urls.py  wsgi.py
requestdataapp/: middlewares.py  urls.py  views.py
requestdataapp/templates/requestdataapp/: base.html  file-upload.html  request-query-params.html  user-bio-form.html
shopapp/: __init__.py  admin.py  admin_mixins.py  forms.py  models.py  querys.sql  serialiizers.py  tests.py  urls.py  views.py
shopapp/fixtures/: products-fixture.json
shopapp/management/commands/: agg.py  annotation.py  bulk_actions.py  create_order.py  (+3 more)
shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_order_receipt.py  0008_product_preview.py  0009_productimage.py  0010_alter_product_description_alter_product_name_and_more.py
(+15 files in other folders)
