[project]
name = "mysite"
version = "0.1.0"
description = ""
authors = [
    {name = "VictorK"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==5.2.7)",
    "djangorestframework (==3.16.1)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "django-debug-toolbar (==6.2.0)",
    "django-filter (==25.2)",
    "drf-spectacular (==0.29.0)",
    "gunicorn (==25.0.1)",
    "whitenoise (==6.11.0)",
    "sentry-sdk (==2.51.0)",
    "pillow (==12.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (==7.3.0)",
    "flake8-docstrings (==1.7.0)"
]
